# hse2019-labs

hw_01/: Makefile
hw_01/include/: bmp.h
hw_01/src/: bmp.c  main.c
hw_02/: Makefile
hw_02/include/: Board.hpp  BoardTest.hpp  StdioBoardView.hpp  Test.hpp
hw_02/src/: Board.cpp  StdioBoardView.cpp  main.cpp
hw_02/test/: BoardTest.cpp  Test.cpp  mainTest.cpp
hw_03/: CMakeLists.txt
hw_03/include/: ByteWriter.hpp  CLI.hpp  Huffman.hpp  HuffmanArchiver.hpp  Statistics.hpp  Trie.hpp
hw_03/src/: ByteWriter.cpp  CLI.cpp  Huffman.cpp  HuffmanArchiver.cpp  Statistics.cpp  Trie.cpp  main.cpp
hw_03/test/: TestByteWriter.cpp  TestCLI.cpp  TestHuffman.cpp  TestHuffmanArchiver.cpp  TestTrie.cpp
lab_01/multiple/: Makefile
lab_02/: Makefile
lab_02/include/: str.h  test_str.h
lab_02/src/: str.c  test.c  test_str.c
lab_03/: Makefile
lab_03/include/: clist.h
lab_03/src/: clist.c  main.c
lab_04/: Makefile
lab_04/include/: mergesort.h
lab_04/src/: main.c  mergesort.c
lab_05/: Makefile
lab_05/include/: clist.h  point_list.h
lab_05/src/: clist.c  main.c  point_list.c
lab_09/: Makefile
lab_09/include/: shared_ptr.hpp
lab_09/src/: matrix.cpp  shared_ptr.cpp
lab_10/: Makefile
lab_10/include/: Circle.hpp  Figure.hpp  Rectangle.hpp  Scheme.hpp
lab_10/src/: Circle.cpp  Figure.cpp  Rectangle.cpp  Scheme.cpp
lab_11/include/: bin_manip.hpp  employees.hpp
lab_11/src/: bin_manip.cpp  employees.cpp  main.cpp
lab_12/: Makefile
lab_12/include/: my_vector.hpp  my_vector_impl.hpp  test.hpp
lab_13/: Makefile
lab_14/: Makefile
lab_18/: Makefile
(+19 files in other folders)
